<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textCard1"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/white"
        android:hint="Ingrese 1° Texto"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="191dp"
        android:layout_height="37dp"
        android:text="RESULTADO:"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textResult3"
        android:layout_width="408dp"
        android:layout_height="144dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="40dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996" />

    <TextView
        android:id="@+id/textResult2"
        android:layout_width="176dp"
        android:layout_height="78dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/textCard2"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/white"
        android:hint="Ingrese 2° Texto"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/botonComparar"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginTop="444dp"
        android:text="Comparar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>